--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,18 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.background": "#1accff",
-    "activityBar.activeBorder": "#df00ad",
-    "activityBar.foreground": "#15202b",
-    "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#df00ad",
-    "activityBarBadge.foreground": "#e7e7e7",
-    "titleBar.activeBackground": "#00b3e6",
-    "titleBar.inactiveBackground": "#00b3e699",
-    "titleBar.activeForeground": "#15202b",
-    "titleBar.inactiveForeground": "#15202b99",
-    "statusBar.background": "#00b3e6",
-    "statusBarItem.hoverBackground": "#008bb3",
-    "statusBar.foreground": "#15202b"
+    "activityBar.background": "#696969",
+    "activityBar.activeBorder": "#c0b3ff",
+    "activityBar.foreground": "#e7e7e7",
+    "activityBar.inactiveForeground": "#e7e7e799",
+    "activityBarBadge.background": "#c0b3ff",
+    "activityBarBadge.foreground": "#282828",
+    "titleBar.activeBackground": "#505050",
+    "titleBar.inactiveBackground": "#50505099",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveForeground": "#e7e7e799",
+    "statusBar.background": "#505050",
+    "statusBarItem.hoverBackground": "#696969",
+    "statusBar.foreground": "#e7e7e7"
   },
-  "peacock.color": "#00b3e6"
+  "peacock.color": "#505050"
 }
