--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -3,3 +3,5 @@
 # @ENG618 will be requested for
 # review when someone opens a pull request.
 * @ENG618
+
+# Further documentation: https://help.github.com/articles/about-codeowners/
