--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,3 +16,4 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
       - run: yarn test
+      - run: yarn chromatic test --exit-zero-on-changes
