feat(publish): Getting ready for publish
Includes adding bable-cli and a build command to compile code to dist/
Also updated README to reflect design system, and moved development
README to CONTRIBUTING.

--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "BABEL_ENV=production babel src -d dist",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public",
     "build-storybook-docs": "build-storybook -s public --docs",
     "chromatic": "CHROMATIC_APP_CODE=sdbo28ndrhl chromatic"
+  },
+  "babel": {
+    "presets": [
+      "react-app"
+    ]
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.7.0",
     "@storybook/addon-a11y": "^5.2.6",
     "@storybook/addon-actions": "^5.2.6",
     "@storybook/addon-docs": "^5.2.6",
