--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "ge-design",
+  "name": "ge-design-system",
+  "description": "Garcia Enterprise react design system",
   "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "polished": "^3.4.2",
-    "prop-types": "^15.7.2",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-scripts": "3.1.1",
-    "styled-components": "^4.4.1"
-  },
+  "private": false,
+  "main": "dist/index.js",
+  "repository": "git@github.com:Garcia-Enterprise/ge-design.git",
+  "author": "Eric N. Garcia <engarcia618@gmail.com>",
+  "license": "MIT",
   "scripts": {
     "start": "react-scripts start",
     "build": "BABEL_ENV=production babel src -d dist",
@@ -19,6 +16,27 @@
     "build-storybook": "build-storybook -s public",
     "build-storybook-docs": "build-storybook -s public --docs",
     "chromatic": "CHROMATIC_APP_CODE=sdbo28ndrhl chromatic"
+  },
+  "dependencies": {
+    "polished": "^3.4.2",
+    "prop-types": "^15.7.2",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-scripts": "3.1.1",
+    "styled-components": "^4.4.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.7.0",
+    "@storybook/addon-a11y": "^5.2.6",
+    "@storybook/addon-actions": "^5.2.6",
+    "@storybook/addon-docs": "^5.2.6",
+    "@storybook/addon-knobs": "^5.2.6",
+    "@storybook/addon-links": "^5.2.6",
+    "@storybook/addon-storysource": "^5.2.6",
+    "@storybook/addons": "^5.2.6",
+    "@storybook/react": "^5.2.6",
+    "prettier": "^1.19.1",
+    "storybook-chromatic": "^3.1.0"
   },
   "babel": {
     "presets": [
@@ -39,18 +57,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.7.0",
-    "@storybook/addon-a11y": "^5.2.6",
-    "@storybook/addon-actions": "^5.2.6",
-    "@storybook/addon-docs": "^5.2.6",
-    "@storybook/addon-knobs": "^5.2.6",
-    "@storybook/addon-links": "^5.2.6",
-    "@storybook/addon-storysource": "^5.2.6",
-    "@storybook/addons": "^5.2.6",
-    "@storybook/react": "^5.2.6",
-    "prettier": "^1.19.1",
-    "storybook-chromatic": "^3.1.0"
   }
 }
