--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@storybook/addon-storysource": "^5.2.6",
     "@storybook/addons": "^5.2.6",
     "@storybook/react": "^5.2.6",
+    "auto": "^7.16.2",
     "prettier": "^1.19.1",
     "storybook-chromatic": "^3.1.0"
   },
