--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@storybook/addon-links": "^6.1.21",
     "@storybook/addon-storysource": "^6.1.21",
     "@storybook/addons": "^6.1.21",
+    "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.1.21",
     "auto": "^10.20.4",
     "eslint": "^7.22.0",
