--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Install dependencies
         run: yarn
-        
+
       - name: License Scan
         run: fossa analyze
 
@@ -41,4 +41,5 @@ jobs:
         run: yarn release
 
     env:
+      GH_TOKEN: ${{ secrets.GH_TOKEN }}
       FOSSA_API_KEY: ${{ secrets.FOSSA_API_KEY }}
