--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Install dependencies
         run: yarn
 
+      - name: Run Tests
+        run: yarn test
+
       - name: License Scan
         run: fossa analyze
 
