--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ name: CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
 
   workflow_dispatch:
 
@@ -29,9 +29,14 @@ jobs:
         with:
           node-version: '12.x'
 
-
       - name: Install dependencies
         run: yarn
+
+      - name: Format
+        run: yarn format:diff
+
+      - name: Lint
+        run: yarn lint
 
       - name: Run Tests
         run: yarn test
