--- a/package.json
+++ b/package.json
@@ -35,7 +35,15 @@
     "@babel/cli": "^7.13.16",
     "@babel/core": "^7.13.16",
     "@eng618/prettier-config": "^1.6.0",
+    "@storybook/addon-a11y": "^6.2.8",
+    "@storybook/addon-actions": "^6.2.8",
+    "@storybook/addon-docs": "^6.2.8",
+    "@storybook/addon-knobs": "^6.2.8",
+    "@storybook/addon-links": "^6.2.8",
+    "@storybook/addon-storysource": "^6.2.8",
+    "@storybook/addons": "^6.2.8",
     "@storybook/preset-create-react-app": "^3.1.7",
+    "@storybook/react": "^6.2.8",
     "auto": "^10.25.1",
     "eslint": "^7.24.0",
     "eslint-config-prettier": "^8.2.0",
