--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,14 +2,10 @@
 
 name: CI
 
-on:
-  push:
-    branches: [master]
-
-  workflow_dispatch:
+on: [push, pull_request]
 
 jobs:
-  build-and-release:
+  build:
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, 'ci skip') && !contains(github.event.head_commit.message, 'skip ci')"
     steps:
@@ -48,6 +44,7 @@ jobs:
         run: yarn auto info
 
       - name: Auto Release
+        if: ${{ github.ref == 'refs/heads/master'}}
         run: yarn release
 
     env:
