--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "build-storybook": "build-storybook -s public",
     "build-storybook-docs": "build-storybook -s public --docs",
     "release": "auto shipit",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "prepare": "husky install"
   },
   "dependencies": {
     "polished": "^4.1.3",
@@ -50,7 +51,9 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^6.0.0",
     "prettier": "^2.3.0",
+    "pretty-quick": "^3.1.0",
     "typescript": "^4.3.2"
   },
   "babel": {
