--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,25 +5,42 @@ name: CI
 on: [push, pull_request]
 
 jobs:
+  fossa-scan:
+    runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, 'ci skip') && !contains(github.event.head_commit.message, 'skip ci')"
+    steps:
+      - name: 'Checkout Code'
+        uses: actions/checkout@v2
+
+      - name: 'Run FOSSA Scan'
+        uses: fossas/fossa-action@main # Use a specific version if locking is preferred
+        with:
+          api-key: ${{secrets.FOSSA_API_KEY}}
+
+      - name: 'Run FOSSA Test'
+        uses: fossas/fossa-action@main # Use a specific version if locking is preferred
+        with:
+          api-key: ${{secrets.FOSSA_API_KEY}}
+          run-tests: true
+
   build:
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, 'ci skip') && !contains(github.event.head_commit.message, 'skip ci')"
+    strategy:
+      matrix:
+        node: ['14', '15', '16', '17']
     steps:
       - uses: actions/checkout@v2
         with:
           token: ${{ secrets.GH_TOKEN }}
+      - uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node }}
 
       - name: Prepare repository
         run: |
           echo "Fetching git tags for auto"
           git fetch --unshallow --tags
-          echo "Installing fossa-cli for license scanning"
-          curl -H 'Cache-Control: no-cache' https://raw.githubusercontent.com/fossas/fossa-cli/master/install.sh | bash
-
-      - name: Use Node.js 12.x
-        uses: actions/setup-node@v2
-        with:
-          node-version: '12.x'
 
       - name: Install dependencies
         run: yarn
@@ -36,9 +53,6 @@ jobs:
 
       - name: Run Tests
         run: yarn test
-
-      - name: License Scan
-        run: fossa analyze
 
       - name: Auto Info
         run: yarn auto info
