--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,12 @@ storybook-static
 
 #builds
 dist
+
+# yarn v2
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
