--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,10 @@ jobs:
       - name: Run Tests
         run: yarn test
 
+  release:
+    runs-on: ubuntu-latest
+    if: success()
+    steps:
       - name: Auto Info
         run: yarn auto info
 
@@ -62,7 +66,6 @@ jobs:
         run: yarn release
 
     env:
-      FOSSA_API_KEY: ${{ secrets.FOSSA_API_KEY }}
       GH_TOKEN: ${{ secrets.GH_TOKEN }}
       NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
