--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,11 +37,6 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
 
-      - name: Prepare repository
-        run: |
-          echo "Fetching git tags for auto"
-          git fetch --unshallow --tags
-
       - name: Install dependencies
         run: yarn
 
@@ -58,6 +53,18 @@ jobs:
     runs-on: ubuntu-latest
     if: success()
     steps:
+      - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.GH_TOKEN }}
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 17
+
+      - name: Prepare repository
+        run: |
+          echo "Fetching git tags for auto"
+          git fetch --unshallow --tags
+
       - name: Auto Info
         run: yarn auto info
 
