--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,14 +51,14 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
-    if: success()
+    needs: [build]
     steps:
       - uses: actions/checkout@v2
         with:
           token: ${{ secrets.GH_TOKEN }}
       - uses: actions/setup-node@v2
         with:
-          node-version: 17
+          node-version: 14
 
       - name: Prepare repository
         run: |
