--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,12 +20,12 @@ jobs:
           api-key: ${{secrets.FOSSA_API_KEY}}
           run-tests: true
 
-  build:
+  test:
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, 'ci skip') && !contains(github.event.head_commit.message, 'skip ci')"
     strategy:
       matrix:
-        node: ['14', '15', '16', '17']
+        node: ['14', '15']
     steps:
       - uses: actions/checkout@v2
         with:
@@ -48,7 +48,7 @@ jobs:
 
   build-and-release:
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: [test]
     steps:
       - uses: actions/checkout@v2
         with:
