--- a/package.json
+++ b/package.json
@@ -45,12 +45,13 @@
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.5.13",
     "auto": "^10.37.6",
+    "babel-loader": "^9.1.0",
     "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^7.0.4",
+    "husky": "^8.0.2",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3"
   },
