--- a/package.json
+++ b/package.json
@@ -38,10 +38,13 @@
     "@storybook/addon-a11y": "^6.5.13",
     "@storybook/addon-actions": "^6.5.13",
     "@storybook/addon-docs": "^6.5.13",
+    "@storybook/addon-essentials": "^6.5.13",
     "@storybook/addon-knobs": "^6.4.0",
     "@storybook/addon-links": "^6.5.13",
     "@storybook/addon-storysource": "^6.5.13",
     "@storybook/addons": "^6.5.13",
+    "@storybook/builder-webpack5": "^6.5.13",
+    "@storybook/manager-webpack5": "^6.5.13",
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.13",
     "auto": "^10.37.6",
@@ -51,6 +54,7 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.7",
     "husky": "^8.0.2",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3"
