--- a/package.json
+++ b/package.json
@@ -39,14 +39,17 @@
     "@storybook/addon-actions": "^6.5.13",
     "@storybook/addon-docs": "^6.5.13",
     "@storybook/addon-essentials": "^6.5.13",
+    "@storybook/addon-interactions": "^6.5.13",
     "@storybook/addon-knobs": "^6.4.0",
     "@storybook/addon-links": "^6.5.13",
     "@storybook/addon-storysource": "^6.5.13",
     "@storybook/addons": "^6.5.13",
     "@storybook/builder-webpack5": "^6.5.13",
+    "@storybook/jest": "^0.0.10",
     "@storybook/manager-webpack5": "^6.5.13",
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.13",
+    "@storybook/testing-library": "^0.0.13",
     "auto": "^10.37.6",
     "babel-loader": "^9.1.0",
     "eslint": "^8.27.0",
