--- a/package.json
+++ b/package.json
@@ -37,13 +37,19 @@
     "@eng618/prettier-config": "^1.6.1",
     "@storybook/addon-a11y": "^6.5.13",
     "@storybook/addon-actions": "^6.5.13",
-    "@storybook/addon-docs": "^6.5.13",
+    "@storybook/addon-docs": "next",
+    "@storybook/addon-essentials": "^6.5.13",
+    "@storybook/addon-interactions": "^6.5.13",
     "@storybook/addon-knobs": "^6.4.0",
     "@storybook/addon-links": "^6.5.13",
     "@storybook/addon-storysource": "^6.5.13",
     "@storybook/addons": "^6.5.13",
+    "@storybook/builder-webpack5": "^6.5.13",
+    "@storybook/jest": "^0.0.10",
+    "@storybook/manager-webpack5": "^6.5.13",
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.13",
+    "@storybook/testing-library": "^0.0.13",
     "auto": "^10.37.6",
     "babel-loader": "^9.1.0",
     "eslint": "^8.27.0",
@@ -51,9 +57,10 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.7",
     "husky": "^8.0.2",
-    "prettier": "^2.7.1",
-    "pretty-quick": "^3.1.3"
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1"
   },
   "babel": {
     "presets": [
@@ -92,5 +99,10 @@
     ]
   },
   "prettier": "@eng618/prettier-config",
+  "lint-staged": {
+    "src/**/*.(js|ts)?(x)": "eslint . --fix",
+    "*.(js|md|ts)?(x)": "prettier --write",
+    "*.(scss|css|json)": "prettier --write"
+  },
   "packageManager": "yarn@3.2.4"
 }
