--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@eng618/prettier-config": "^1.6.1",
     "@storybook/addon-a11y": "^6.5.13",
     "@storybook/addon-actions": "^6.5.13",
-    "@storybook/addon-docs": "next",
+    "@storybook/addon-docs": "^6.5.13",
     "@storybook/addon-essentials": "^6.5.13",
     "@storybook/addon-interactions": "^6.5.13",
     "@storybook/addon-knobs": "^6.4.0",
