--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "react-scripts start",
     "build": "BABEL_ENV=production babel src -d dist",
     "test": "react-scripts test",
+    "test:ci": "CI=true react-scripts test",
     "eject": "react-scripts eject",
     "format": "prettier --write \"src/**/*.{scss,css,js,md,mdx}\"",
     "format:diff": "prettier --check \"src/**/*.{scss,css,js,md,mdx}\"",
