--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,9 +44,6 @@ jobs:
     needs: [test]
     steps:
       - uses: actions/checkout@v3
-        with:
-          token: ${{ secrets.GH_TOKEN }}
-
       - uses: actions/setup-node@v3
         with:
           node-version: 18
@@ -58,7 +55,7 @@ jobs:
           git fetch --unshallow --tags
 
       - name: Install dependencies
-        run: yarn
+        run: yarn install --immutable
 
       - name: Build
         run: yarn build
@@ -67,7 +64,7 @@ jobs:
         run: yarn auto info
 
       - name: Auto Release
-        if: ${{ github.ref == 'refs/heads/master'}}
+        if: ${{ github.ref == 'refs/heads/main'}}
         run: yarn release
 
     env:
