--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,15 +44,19 @@ jobs:
     needs: [test]
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
         with:
-          node-version: 18
-          cache: 'yarn'
+          token: ${{ secrets.GH_TOKEN }}
 
       - name: Prepare repository
         run: |
           echo "Fetching git tags for auto"
           git fetch --unshallow --tags
+
+      - name: Use Node.js 18.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: 'yarn'
 
       - name: Install dependencies
         run: yarn install --immutable
