--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,7 @@ jobs:
         run: yarn auto info
 
       - name: Auto Release
-        if: ${{ github.ref == 'refs/heads/main'}}
+        if: github.ref == 'refs/heads/main'
         run: yarn release
 
     env:
