--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,10 +19,11 @@ jobs:
     if: (!contains(github.event.head_commit.message , 'ci skip') && !contains(github.event.head_commit.message, 'skip ci'))
     strategy:
       matrix:
-        node: ['18']
+        node: ['18', '20']
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Use Node.js ${{ matrix.node }}
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node }}
           cache: 'yarn'
@@ -52,10 +53,10 @@ jobs:
           echo "Fetching git tags for auto"
           git fetch --unshallow --tags
 
-      - name: Use Node.js 18.x
+      - name: Use Node.js ${{ matrix.node }}
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: ${{ matrix.node }}
           cache: 'yarn'
 
       - name: Install dependencies
